2007-01-19  Rick Moseley  <rmoseley@redhat.com>

	* FryskHelpManager.javain: New improved configuration-aware.
	* FryskHelpManager.java: Changed to above.

2006-12-16  Adam Jocksch  <ajocksch@redhat.com>

	* prefs/BooleanPreference.java (listeners): Is now a LinkedList.
	* prefs/ColorPreference.java (listeners): Ditto.
	* prefs/IntPreference.java (listeners): Ditto.

2006-12-07  Andrew Cagney  <cagney@redhat.com>

	* Messages.java: Remove TODO comment, TODONE.

2006-12-06  Andrew Cagney  <cagney@redhat.com>

	* UBigInteger.java: Remove @author.
	* Util.java: Ditto.

	* FryskIconSet.java: Add copyright.
	* prefs/PreferenceManager.java: Ditto.
	* prefs/IntPreference.java: Ditto.
	* prefs/BooleanPreference.java: Ditto.
	* prefs/PreferenceEditor.java: Ditto.
	* prefs/PreferenceGroup.java: Ditto.
	* prefs/PreferenceWindow.java: Ditto.
	* prefs/FryskPreference.java: Ditto.
	* prefs/ColorPreference.java: Ditto.
	* IconManager.java: Ditto.

2006-11-20  Mike Cvet  <mcvet@redhat.com>

	* ProcBlockCounter.java: Removed. Obsoleted by RunState.

2006-11-15  Mike Cvet  <mcvet@redhat.com>

	* IconManager.java (TOP_PNG): Changed from BOTTOM_PNG
	(loadIcons): Changed bottomset to topset; updated to use TOP_PNG.

2006-10-04  Mike Cvet  <mcvet@redhat.com>

	* ProcBlockCounter.java: Refactored from TaskBlockCounter.
	* ProcBlockCounter.java (getBlockCount): Updated to use procs.
	(incBlockCount): Ditto.
	(decBlockCount): Ditto.

2006-10-02  Mike Cvet  <mcvet@redhat.com>

	* IconManager.java (getHostInfo): Added a NullPointerException
	catch.

2006-09-16  Mike Cvet  <mcvet@redhat.com>

	* TaskBlockCounter.java: Added Javadoc.

2006-08-30  Rick Moseley  <rmoseley@redhat.com>

	* IconManager.java: Changed method name from getHostName to getHostInfo,
	do not backtrace if info is not found, return error, added javadoc.

2006-08-29  Rick Moseley  <rmoseley@redhat.com>

	* IconManager.java: Added tooltip info about which host the 
	eggtrayicon is connected to.
