@@ -1,3 +1,8 @@
+2007-01-23  Rick Moseley  <rmoseley@redhat.com>
+
+	* FryskHelpManager.java: Re-added.
+	* FryskHelpManager.javain: Deleted.
+
 2007-01-19  Rick Moseley  <rmoseley@redhat.com>
 
 	* FryskHelpManager.javain: New improved configuration-aware.
